<resources>
    <string name="app_name">Atividades da Congregação</string>
    <string name="action_update_database">Atualizar Registros</string>
    <string name="action_preferences">Preferências</string>
    <string name="section_format">1. Conecte com a Internet\n2. Entre no Menu de Preferências\n3. Clique em \'Atualizar Registros\'</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aguardes_baixando_publicadores">Aguarde! Baixando Cadastro de Publicadores..</string>
    <string name="atividades_da_congregacao">Atividades da Congregação</string>
    <string name="atualizando_publicadores">Atualizando Tabela Publicadores</string>
    <string name="atualizando_relatorios">Atualizando Relatórios</string>
    <string name="atualizar">Atualizar Registros</string>
    <string name="atualizar_banco_pergunta">Atualização Disponivel!\nAtualizar Banco de Dados?</string>
    <string name="background_jobs_in_progress">Background Jobs in Progress</string>
    <string name="bofete">Congregação Bofete</string>
    <string name="cartao">Ver Cartão</string>
    <string name="data">Data</string>
    <string name="envia_cartao">Envia Cartão</string>
    <string name="error">Houston, temos um problema</string>
    <string name="estudos">Estudos</string>
    <string name="familia">Familia</string>
    <string name="geral">Geral</string>
    <string name="grupo_de_estudo_adriano">Grupo de Estudo Adriano</string>
    <string name="horas">Horas</string>
    <string name="i_am_the_centro_fragment">I am the Centro Fragment</string>
    <string name="import_SQL_not_implemented">Importação SQL não foi implementada ainda!</string>
    <string name="importacao_de_dados">Importação de Arquivo Texto</string>
    <string name="importacao_publicadores_MySQL_concluida">Importação dos publicadores MySQL concluida</string>
    <string name="importacao_relatorios_MySQL_concluida">Importação dos relatorios MySQL concluida</string>
    <string name="limpar_historico">Limpar historico</string>
    <string name="listas">Listas</string>
    <string name="menu_search">Buscar</string>
    <string name="mes">Mês</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nome_do_publicador">Nome do Publicador</string>
    <string name="os_registros_serao_obtidos">Os Registros serão obtidos do %s</string>
    <string name="pesquisas_especiais">Pesquisas Especiais</string>
    <string name="por_grupo">Por Grupo</string>
    <string name="por_privilegio">Por Privilégio</string>
    <string name="preferencias">Preferências</string>
    <string name="public_abrev">Public.</string>
    <string name="publicacoes">Publicações</string>
    <string name="publicadores_por_grupos">Por Grupo</string>
    <string name="rebanho">\"Você deve conhecer bem a aparência do seu rebanho\"\n Provérbios 27:23</string>
    <string name="revisitas">Revisitas</string>
    <string name="rotinas_do_sistema">Rotinas do Sistema</string>
    <string name="sdcard">/sdcard/</string>
    <string name="searchable">Buscar</string>
    <string name="sem_conexao_internet">Sem Conexão com a Internet</string>
    <string name="totais">Totais</string>
    <string name="videos">Videos</string>
    <string name="copy">Copiar Banco para Memória</string>
    <string name="novo_relatorio">Enviar Relatório</string>
    <string name="corrrigir_relatorio">Corrigir Relatório</string>
    <string name="autenticacao_falhou">A autenticação falhou!</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="falta_email_senha">Falta email e/ou senha</string>
    <string name="email_invalido">Email não é um endereço válido</string>
    <string name="servidor_nao_respondeu">Servidor não respondeu NADA</string>
    <string name="autenticacao">AUTENTICAÇÂO</string>
    <string name="autenticacao_instalacao">A autenticação é feita apenas na primeira vez após a instalação do aplicativo.
        Sem a autenticação não será possivel enviar relatórios para o servidor.
    </string>
    <string name="enviar">Enviar</string>
    <string name="nao_quero">Entendi.\nQuero deixar para depois</string>
    <string name="publicador">Nome</string>
    <string name="log_off">Log Off</string>
    <string name="deseja_logoff">Deseja fazer logoff do servidor?</string>
    <string name="cancelar">CANCELAR</string>
    <string name="enviarM">ENVIAR</string>
    <string name="Label_familia">Familia:</string>
    <string name="label_grupo">Grupo:</string>
    <string name="label_medias_meses">Médias últimos x Meses</string>
    <string name="label_media_horas">Média Horas 6 Meses</string>
    <string name="label_media_revisitas">Média Revisitas 6 Meses</string>
    <string name="label_media_estudos">Média Estudos 6 Meses</string>
    <string name="label_media_videos">Média Videos</string>
    <string name="label_media_publicaoes">Média Publicações</string>
    <string name="label_pioneiro_aux">Saiu de Pioneiro Auxiliar x vezes</string>
    <string name="label_nao_relatou">Deixou de relatar x vezes</string>
    <string name="contato">Contato</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="extra">Extra</string>
    <string name="label_tempo_de_batismo">Tempo de Batismo</string>
    <string name="label_dados_pessoais">Dados Pessoais</string>
    <string name="label_idade">Idade:</string>
    <string name="relatorio">Relatório</string>
    <string name="SIM">SIM</string>
    <string name="NAO">NÂO</string>
    <string name="dialogo_cancelar_envio">Deseja Cancelar o Envio do Relatório?</string>
    <string name="dialogo_relatorio_existe">Este relatório já foi enviado!\nDeseja corrigir o relatório atual?</string>
    <string name="dialogo_escolhe_publicador">Por favor, escolhe um publicador!</string>
    <string name="dialogo_publicador_nao_existe">Publicador não existe!\nEscolhe um nome da lista.</string>
    <string name="problema_servidor_verificar">Problema no Servidor. Favor Verificar</string>
    <string name="CANCEL">CANCELAR</string>
    <string name="dialogo_servidor_corrigido">O Relatório foi corrigido com sucesso!</string>
    <string name="dialogo_servidor_gravado">O Relatório foi enviado com sucesso!</string>
    <string name="enviar_assistencia">Enviar Assistência</string>
    <string name="fone">015–981.58.27.26</string>
    <string name="_regular">" Regular"</string>
    <string name="dados_ano_servico">Dados do Ano de Serviço</string>
    <string name="familia_">"Familia "</string>
    <string name="grupo_">"Grupo "</string>
    <string name="idade_">"Idade "</string>
    <string name="batismo_">"Tempo de Batismo "</string>
    <string name="bairro_">"Bairro "</string>
    <string name="pio_total_horas">Total de Horas até o momento</string>
    <string name="zero">00,0</string>
    <string name="pio_media_mensal">Média Mensal até o momento</string>
    <string name="pio_requsito_anual">Media Mensal para cumprir\no Requisito anual</string>
    <string name="media_de_revisitas">Média de Revisitas</string>
    <string name="media_de_estudos">Média de Estudos</string>
    <string name="relatou">Relatou todos os meses</string>
    <string name="inativa">Inativa</string>
    <string name="inativo">Inativo</string>
    <string name="nao_relatou">"Deixou de relatar "</string>
    <string name="mais_tarde">Está sem Internet. O Relatório será enviado automaticamente assim que tiver conexão com a Internet</string>
    <string name="limpa_tudo">Limpa Tudo</string>
    <string name="test">test</string>
    <string name="tela_inicical">Tela Inicical</string>
    <string name="relat_rios_em_falta">Relatórios em Falta Por Grupo</string>
    <string name="nao_relataram">Não Relataram</string>
    <string name="media_estudos">Media Estudos</string>
    <string name="media_revisitas">Media Revisitas</string>
    <string name="media_horas">Media Horas</string>
    <string name="meses">Meses</string>
    <string name="requisito">Requisito</string>
    <string name="media_requsito">"Média para Cumprir o Requisito Anual "</string>
    <string name="media_requsito_ponto">"Média para Cumprir o Requisito Anual: "</string>
    <string name="media_momento">"Média Mensal até o momento: "</string>
    <string name="rotinas_de_teste">Rotinas de Teste</string>
    <string name="teste_1">Teste 1</string>
    <string name="seta">Seta</string>
    <string name="janeiro_2017">Janeiro / 2017</string>
    <string name="reuniao_fim_de_semana">Reunião de fim de semana:</string>
    <string name="_108">108</string>
    <string name="reuniao_durante_a_semana">Reunião durante a semana:</string>
    <string name="numero_de_reunioes">Número de Reuniões:</string>
    <string name="_4"> 4 </string>
    <string name="total_de_presentes">Total de Presentes</string>
    <string name="_400">404</string>
    <string name="ano_de_servico">Ano de Serviço</string>
    <string name="media_do_mes">Média do Mes:</string>

    <string-array name="sourceDataImport">
        <item>Servidor SQL</item>
        <item>Arquivo Texto</item>
    </string-array>
    <string-array name="sourceDataImportValues">
        <item>SQL</item>
        <item>Texto</item>
    </string-array>
    <string-array name="mesesNomes">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
    <string-array name="ano">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="fim_de_semana">
        <item>sábado</item>
        <item>domingo</item>
    </string-array>

    <string-array name="durante_a_semana">
        <item>segunda-feira</item>
        <item>terça-feira</item>
        <item>quarta-feira</item>
        <item>quinta-feira</item>
        <item>sexta-feira</item>
    </string-array>


    <string-array name="modalidade">
        <item>Publicador</item>
        <item>Pioneiro Regular</item>
        <item>Pioneiro Auxiliar</item>
    </string-array>

    <string-array name="reuniao">
        <item>Reunião durante a semana</item>
        <item>Reunião de fim de semana</item>
    </string-array>


    <string name="text">Scheidender US-Präsident Barack Obama begnadigt Chelsea Manning - frei im Mai 2017.
        Stand: 22:27 Uhr. Chelsea Manning. Quelle: AFP. Kurz vor der Amtsübergabe an Donald Trump
        hat US-Präsident Barack Obama der verurteilten </string>
    <string name="data_no_formato_dd_mm_aaaa">Data no formato dia/mes/ano</string>
    <string name="presentes">Presentes</string>
    <string name="dialogo_cancelar_envio_assistencia">Cancelar o envio da assistência?</string>
    <string name="informe_presentes">Por favor, informe o número dos presentes!</string>
    <string name="confirma_baixomedia">A assistência informada de %1$s está bem diferente da média de %2$s.\nConfirma?</string>
    <string name="fora_da_faixa">O número informado está fora da faixa permitida</string>
    <string name="offline_aguardando_online">O Relatório foi gravado no modo OFFLINE. O Relatório será enviado automaticamente assim que o sistema estiver ONLINE.</string>
    <string name="houston">Gravação Local Falhou. Avise o George</string>
    <string name="ver_ano_de_servico">Ver Ano De Serviço</string>
    <string name="medias">Médias</string>
    <string name="datas">Datas</string>


</resources>
