<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="br.com.anagnostou.publisher.telas.PioneirosActivity">

    <include
        android:id="@+id/atividades_toolbar"
        layout="@layout/app_bar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atividades_toolbar"
        android:background="@color/colorPrimary"
        android:padding="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/depressed_color"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPubDados"
                style="@style/pioneerDetailsTitle"
                android:text="@string/label_dados_pessoais" />

            <TextView
                android:id="@+id/tvPub5"
                style="@style/pioneerDetails"
                android:text="@string/label_idade" />

            <TextView
                android:id="@+id/tvPub6"
                style="@style/pioneerDetails"
                android:text="@string/label_tempo_de_batismo" />

            <TextView
                android:id="@+id/tvPub1"
                style="@style/pioneerDetails"
                android:text="@string/Label_familia" />

            <TextView
                android:id="@+id/tvPub2"
                style="@style/pioneerDetails"
                android:text="@string/label_grupo" />

            <TextView
                android:id="@+id/tvPub3"
                style="@style/pioneerDetails"
                android:text="@string/rua" />

            <TextView
                android:id="@+id/tvPub4"
                style="@style/pioneerDetails"
                android:text="@string/bairro" />

            <TextView
                android:id="@+id/tvPubTitle"
                style="@style/pioneerDetailsTitle"
                android:text="@string/label_medias_meses" />

            <TextView
                android:id="@+id/tvPub7"
                style="@style/pioneerDetails"
                android:text="@string/label_media_horas" />

            <TextView
                android:id="@+id/tvPub8"
                style="@style/pioneerDetails"

                android:text="@string/label_media_revisitas" />

            <TextView
                android:id="@+id/tvPub9"
                style="@style/pioneerDetails"
                android:text="@string/label_media_estudos" />

            <TextView
                android:id="@+id/tvPub13"
                style="@style/pioneerDetails"
                android:text="@string/label_media_videos" />

            <TextView
                android:id="@+id/tvPub14"
                style="@style/pioneerDetails"
                android:text="@string/label_media_publicaoes" />





            <TextView
                style="@style/pioneerDetails" />

            <TextView
                style="@style/pioneerDetails"/>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/LLam1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPubFone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/fone"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:onClick="ligarFone"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_call_white_24dp"
            android:textSize="20sp"
            android:contentDescription="@string/videos" />
    </LinearLayout>
</RelativeLayout>
