<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvRelatorios"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/depressed_color"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/data"
            style="@style/relatorio_tela_pequena"
            android:text="Data" />

        <TextView
            android:id="@+id/publicacoes"
            style="@style/relatorio_tela_pequena"
            android:text="@string/publicacoes" />

        <TextView
            android:id="@+id/videos"
            style="@style/relatorio_tela_pequena"
            android:text="@string/videos" />

        <TextView

            android:id="@+id/horas"
            style="@style/relatorio_tela_pequena"
            android:text="@string/horas"
            android:textSize="17sp" />

        <TextView

            android:id="@+id/revisitas"
            style="@style/relatorio_tela_pequena"
            android:text="@string/revisitas" />

        <TextView

            android:id="@+id/estudos"
            style="@style/relatorio_tela_pequena"
            android:text="@string/estudos" />

    </LinearLayout>
</android.support.v7.widget.CardView>