<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.anagnostou.publisher.MainActivity">

    <item
        android:id="@+id/action_relatorio"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_relatorio"
        android:title="@string/cartao"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/enviarRelatorio"
        android:orderInCategory="200"
        android:icon="@drawable/enviar_relatorio"
         android:title="@string/novo_relatorio"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

</menu>
