<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.anagnostou.publisher.telas.LoginActivity">

    <TextView
        android:id="@+id/tvLoginRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autenticacao"
        android:textColor="@color/depressed_color"
        android:textAlignment="center"
        style="@style/publisherDetailsTitle"
        android:background="@drawable/rounded_button"/>



    <EditText
        android:layout_below="@+id/tvLoginRequest"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/publisherDetailsTitle"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_border"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        style="@style/publisherDetailsTitle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_border"/>

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:textColor="@color/depressed_color"
        android:text="@string/enviar"
        android:textSize="22sp"
        android:background="@drawable/rounded_button" />

    <TextView
        android:id="@+id/tvLoginRequestExplicacao"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autenticacao_instalacao"
        android:textColor="@color/black"
        style="@style/publisherDetailsTitle"
        android:textSize="12sp"
        android:background="@drawable/rounded_border"/>

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/btnDesisto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginRequestExplicacao"
        android:textColor="@color/depressed_color"
        android:text="@string/nao_quero"
        android:textSize="12sp"
        android:background="@drawable/rounded_button" />

</RelativeLayout>
