<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvPioneiros"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/nome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_publicador"
            android:textColor="@color/dark_color"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/ll_hide_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:orientation="vertical"
            android:padding="5dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/meses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meses"
                    android:textColor="@color/dark_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/horas"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pio_total_horas"
                    android:textColor="@color/dark_color"
                    android:textSize="16sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/mediahoras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_horas"
                android:textColor="@color/dark_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mediarequsito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requisito"
                android:textColor="@color/dark_color"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>