<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/depressed_color"
    android:orientation="vertical"
    tools:context="br.com.anagnostou.publisher.telas.CartaoActivity">

    <include
        android:id="@+id/cartao_toolbar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cvCartaoCabecalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/depressed_color"
            android:orientation="horizontal">

            <TextView
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/mes"
                android:textStyle="bold" />

            <TextView
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/public_abrev"
                android:textStyle="bold" />

            <TextView
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/videos"
                android:textStyle="bold" />

            <TextView

                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/horas"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView

                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/revisitas"
                android:textStyle="bold" />

            <TextView

                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/estudos"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/totais"
        android:textSize="17sp"
        android:layout_marginLeft="3dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <android.support.v7.widget.CardView

        android:id="@+id/cvCartaoCabecalhoTotais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/depressed_color"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mesesTotal"
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/mes"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publicacoesTotal"
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/public_abrev"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/videosTotal"
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/videos"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/horasTotal"
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/horas"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/revisitasTotal"
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/revisitas"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/estudosTotal"
                style="@style/relatorio_tela_pequena_cabecalho"
                android:text="@string/estudos"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
    </ScrollView>

</LinearLayout>
